--- a/blocks/Topbar/Topbar.css
+++ b/blocks/Topbar/Topbar.css
@@ -30,4 +30,70 @@ header .topbar div:before {
 .topbar p {
   font-size: 14px;
   }
-  
+
+
+  a {
+  text-decoration: none;
+}
+
+.topbar {
+  font-family: monospace;
+}
+
+.topbar ul {
+  background: darkorange;
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+.topbar li {
+  color: #fff;
+  background: darkorange;
+  display: block;
+  float: left;
+  padding: 1rem;
+  position: relative;
+  text-decoration: none;
+  transition-duration: 0.5s;
+}
+
+.topbar li a {
+  color: #fff;
+}
+
+.topbar li:hover,
+.topbar li:focus-within {
+  background: red;
+  cursor: pointer;
+}
+
+.topbar li:focus-within a {
+  outline: none;
+}
+
+.topbar ul li ul {
+  background: orange;
+  visibility: hidden;
+  opacity: 0;
+  min-width: 5rem;
+  position: absolute;
+  transition: all 0.5s ease;
+  margin-top: 1rem;
+  left: 0;
+  display: none;
+}
+
+ul li:hover > ul,
+ul li:focus-within > ul,
+ul li ul:hover,
+ul li ul:focus {
+   visibility: visible;
+   opacity: 1;
+   display: block;
+}
+
+ul li ul li {
+  clear: both;
+  width: 100%;
+}
