--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -1,12 +1,12 @@
 .accordion {
-    background: #EFEFEF;
+    background: #dedede;
     border: 1px solid #ddd;
     border-radius: 6px;
 }
 
 .accordion-container .default-content-wrapper{
 
-  background-color: #7c45ff;
+  background-color: #444444;
   border:1px solid #fff;
   color:#fff;
   text-align: center;
@@ -23,12 +23,12 @@
 .item-title {
     cursor: pointer;
     padding: 12px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #000;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #3f006d;
-    color:#fff;
+    background: #dedede;
+    color:#000;
 }
 
 .item-title::after {
@@ -43,8 +43,9 @@
 }
 
 .item-title.open {
-    background: #3f006d;
-    color:#fff;
+    background: #dedede;
+    color:#151515
+
 }
 
 .item-title.open::after {
