--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -1,13 +1,13 @@
 .table {
   width: 100%;
   overflow-x: auto;
-  border-radius: 10px;
-overflow: hidden;
-box-shadow: 0 0 40px 0 rgba(0,0,0,.15);
--moz-box-shadow: 0 0 40px 0 rgba(0,0,0,.15);
--webkit-box-shadow: 0 0 40px 0 rgba(0,0,0,.15); 
--o-box-shadow: 0 0 40px 0 rgba(0,0,0,.15);
--ms-box-shadow: 0 0 40px 0 rgba(0,0,0,.15);
+  border-radius: 0px;
+  overflow: hidden;
+  box-shadow: 0 0 40px 0 rgba(0,0,0,.15);
+  -moz-box-shadow: 0 0 40px 0 rgba(0,0,0,.15);
+  -webkit-box-shadow: 0 0 40px 0 rgba(0,0,0,.15);
+  -o-box-shadow: 0 0 40px 0 rgba(0,0,0,.15);
+  -ms-box-shadow: 0 0 40px 0 rgba(0,0,0,.15);
 }
 
 .table table {
@@ -30,22 +30,23 @@ box-shadow: 0 0 40px 0 rgba(0,0,0,.15);
 }
 .table table thead th{
 
-  background-color: #7c45ff;
-  color:#ffffff;
+  background-color: #c9c9c9;
+  color:#1b1b1b;
 }
 .table table thead tr {
   border-top: 2px solid;
-background-color:  #dedede;
+  background-color:  #a1a4ac;
 }
 
 .table table tbody tr:nth-child(even)
 {
   font-weight: 700;
-  background-color: #f8f6ff;
+  background-color: #F6F6F6;
+  border:1px solid #dedede;
 }
 
 .table table th, .table table td {
-  padding: 8px 16px;
+  padding:  15px;
   text-align: left;
 }
 
