--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -7,36 +7,45 @@
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(302px, 1fr));
-  grid-gap: 16px;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-gap: 20px;
 }
 
 .cards > ul > li {
-  background-color: #fff;
+  background-color: #EDF2F4;
   border-radius: 8px;
   -webkit-box-shadow: 0 4px 1pc 0 hsla(0,0%,47%,.16);
   box-shadow: 0 4px 1pc 0 hsla(0,0%,47%,.16);
+  padding: 16px 24px 40px;
+
 }
 
 .cards .cards-card-body {
-  margin: 16px;
+  margin: 16px 0 0 0;
 }
 
 .cards .cards-card-image {
   line-height: 0;
+  margin:15px 0 15px 0;
 }
 
 .cards .cards-card-body > *:first-child {
-  margin-top: 0;
+  margin: 0 0 8px 0;
+  font-size:25px;
+  line-height: 32px;
+
+}
+.cards > ul > li p {
+font-size: 16px;
+line-height:24px;
+margin:0;
+
 }
 
 .cards > ul > li img {
-  width: 20%;
+  width: 30%;
   height: auto;
   display: inline-block;
-  left: -5px;
-  position: relative;
-  top: -13px;
 }
 .cards.demo-cards > ul > li img {
   width: 40%;
