--- a/styles/styles.css
+++ b/styles/styles.css
@@ -153,7 +153,7 @@ a.button:any-link, button {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  border-radius: 30px;
+
 }
 
 
@@ -219,10 +219,20 @@ main img {
   height: 100%;
   width: 100%;
 }
-main .section  .hero{
-  padding: 64px 16px;
-  padding: 48px 32px;
+main .section  .hero {
+  display:flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  vertical-align: bottom;
 }
+
+main .section  .hero div{
+
+background-color: rgba(0,0,0,.8);
+z-index: 10;
+margin-bottom:-15px;
+}
+
 
 main .section {
   padding: 60px 0 60px 0;
